Use correct DBus interface for inhibiting sleep

This is used to play a small animation before idle shutdown.

BUG: 512276