src/core/session_consolekit.cpp
@@ -228,8 +228,8 @@ void ConsoleKitSession::switchTo(uint terminal)
 
 FileDescriptor ConsoleKitSession::delaySleep(const QString &reason)
 {
-    QDBusMessage message = QDBusMessage::createMethodCall(s_serviceName, m_seatPath,
-                                                          s_seatInterface,
+    QDBusMessage message = QDBusMessage::createMethodCall(s_serviceName, s_managerPath,
+                                                          s_managerInterface,
                                                           QStringLiteral("Inhibit"));
     message.setArguments({QStringLiteral("sleep"), QStringLiteral("compositor"), reason, QStringLiteral("delay")});
 
